--- a/web/index.html
+++ b/web/index.html
@@ -2,15 +2,190 @@
 <html>
 <head><title>TDSweb</title></head>
 <script src="tdsweb.js"></script>
+<link rel="stylesheet" href="tdsweb.css" />
 <body>
 
-<div>
+<div id="login">
 <form id="login-form">
 <label for="username">Username:</label> <input type="text" id="username" disabled="disabled" />
 <label for="password">Password:</label> <input type="password" id="password" disabled="disabled" />
 <input type="submit" id="login-button" value="Login" disabled="disabled" />
 </form>
 <span id="status">Not connected.</span>
+</div>
+
+<div id="horiz-bit">
+
+<div id="query">
+<textarea>QUERY</textarea>
+</div>
+
+<div id="messages">
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+MESSAGES<br />
+</div>
+
+</div>
+
+<div id="results">
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
+RESULTS<br />
 </div>
 
 </body>
