show messages on frontend

--- a/web/index.html
+++ b/web/index.html
@@ -20,136 +20,7 @@
 <textarea>QUERY</textarea>
 </div>
 
-<div id="messages">
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-MESSAGES<br />
-</div>
+<div id="messages"></div>
 
 </div>
 
