allow submitting queries

--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head><title>TDSweb</title></head>
+<head>
+<title>TDSweb</title>
+<meta charset="utf-8" />
+</head>
 <script src="tdsweb.js"></script>
 <link rel="stylesheet" href="tdsweb.css" />
 <body>
@@ -17,7 +20,8 @@
 <div id="horiz-bit">
 
 <div id="query">
-<textarea>QUERY</textarea>
+<button disabled="disabled" style="color: green" id="go-button">▶</button>
+<textarea disabled="disabled" id="query-box"></textarea>
 </div>
 
 <div id="messages"></div>
