show results on frontend

--- a/web/index.html
+++ b/web/index.html
@@ -28,40 +28,7 @@
 
 </div>
 
-<div id="results">
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-RESULTS<br />
-</div>
+<div id="results"></div>
 
 </body>
 </html>
