add stop button

--- a/web/index.html
+++ b/web/index.html
@@ -20,7 +20,12 @@
 <div id="horiz-bit">
 
 <div id="query">
+
+<div id="query-buttons">
 <button disabled="disabled" style="color: green" id="go-button">▶</button>
+<button disabled="disabled" style="color: red" id="stop-button">■</button>
+</div>
+
 <textarea disabled="disabled" id="query-box"></textarea>
 </div>
 
