--- a/web/index.html
+++ b/web/index.html
@@ -26,7 +26,7 @@
 <button disabled="disabled" style="color: red" id="stop-button">■</button>
 </div>
 
-<textarea disabled="disabled" id="query-box"></textarea>
+<textarea readonly="readonly" id="query-box"></textarea>
 </div>
 
 <div id="messages"></div>
