add Excel support

--- a/web/index.html
+++ b/web/index.html
@@ -24,6 +24,7 @@
 <div id="query-buttons">
 <button disabled="disabled" style="color: green" id="go-button">▶</button>
 <button disabled="disabled" style="color: red" id="stop-button">■</button>
+<button disabled="disabled" id="excel-button">Export to spreadsheet</button>
 
 <span id="database-changer-container" style="display: none">
 <label for="database-changer">Database:</label>
